fix: overflowing long text in ftva menu (#612)
* fix: overflowing long text in ftva menu

* chore: add story that shows long menu

* chore: lint

---------

--- a/src/styles/ftva/_header-sticky.scss
+++ b/src/styles/ftva/_header-sticky.scss
@@ -24,6 +24,7 @@
             color: white;
             font-size: 20px;
             font-weight: 500;
+            line-height: normal;
         }
     }
 }
